Stabilize replay output and record verified delivery evidence